fix spacing

--- a/src/Components/Gallery.css
+++ b/src/Components/Gallery.css
@@ -1,5 +1,5 @@
 
-#galleryComp {
+#gallery {
     margin: 0 auto;  /* margin to center */
     min-height: calc(100vh-4rem);
     width: 100vw;
